--- a/index.html
+++ b/index.html
@@ -15,48 +15,47 @@
   <body>
     <div class="testimonials-container">
       <h2>Many Satisfied Clients</h2>
-      
-        <div class="testimonial">
-            <a href="#"><img src="upwork.png" alt="upwork" /></a>
-            <p>
-              Great work done. Hire Charles for your next project
-              <span>~Harsh</span>
-            </p>
-            <span class="numbertext">1 / 3</span>
-        </div>
 
-          <div class="testimonial">
-            <a href="#"><img src="upwork.png" alt="upwork" /></a>
-            <p>
-              Work with Charles now before he gets too expensive and too busy
-              for you. Charles is someone who is the REAL "rising talent". A
-              complete gentleman (yes they still exist) has a great work ethic
-              and improvises for you without you asking. All the qualities of
-              someone who is going to leave a mark in the world and produce
-              delightful experiences for his clients and his network
-              <span>~Harsh</span>
-            </p>
-            <span class="numbertext">2 / 3</span>
-        </div>
+      <div class="testimonial">
+        <a href="#"><img src="upwork.png" alt="upwork" /></a>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora,
+          minus. Ea quo amet vitae! Ratione magnam ullam iste suscipit porro,
+          modi autem hic harum fugiat officiis ab vero, ex eius?
+          <span>-Chaoo</span>
+        </p>
+        <span class="numbertext">1/3</span>
+      </div>
 
-          <div class="testimonial">
-            <a href="#"><img src="upwork.png" alt="upwork" /></a>
-            <p>
-              Great work done by Charles. The attention to detail and the great
-              improvisations are all great additions to the project that Charles
-              brings <span>~Harsh</span>
-            </p>
-            <span class="numbertext">3 / 3</span>
-        </div>
-      </>
+      <div class="testimonial">
+        <a href="#"><img src="upwork.png" alt="upwork" /></a>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora,
+          minus. Ea quo amet vitae! Ratione magnam ullam iste suscipit porro,
+          modi autem hic harum fugiat officiis ab vero, ex eius?
+          <span>-ChaooCharles</span>
+        </p>
+        <span class="numbertext">2/3</span>
+      </div>
+
+      <div class="testimonial">
+        <a href="#"><img src="upwork.png" alt="upwork" /></a>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora,
+          minus. Ea quo amet vitae! Ratione magnam ullam iste suscipit porro,
+          modi autem hic harum fugiat officiis ab vero, ex eius?
+          <span>-Charles</span>
+        </p>
+        <span class="numbertext">3/3</span>
+      </div>
 
       <div>
-        <a class="prev"
-          ><i class="fas fa-long-arrow-alt-left"></i
-        ></a>
-        <a class="next" 
-          ><i class="fas fa-long-arrow-alt-right"></i
-        ></a>
+        <a class="prev">
+          <i class="fas fa-long-arrow-alt-left"></i>
+        </a>
+        <a class="next">
+          <i class="fas fa-long-arrow-alt-right"></i>
+        </a>
       </div>
     </div>
   </body>
